Fixing width problem on mobile.

--- a/sass/_body.scss
+++ b/sass/_body.scss
@@ -2,7 +2,7 @@ body {
 	background-color: #000;
 	font-size:16px;
 	color: white;
-
+	width:100%;
 }
 
 .container {
