--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -8,7 +8,7 @@
 	transition: 2s;
 
 	.logoLarge {
-		height: 34vh;
+		height: 30vh;
 		flex-basis:100%;
 		text-align:center;
 		padding-bottom:2rem;
@@ -28,7 +28,6 @@
 				flex-basis:25%;
 				text-align:left;
 				margin-top:5.5rem;
-				
 
 			img {
 				height: 9rem;
